--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,132 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500;600&family=Work+Sans:wght@400;500;700&display=swap');
+
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.heading{
+  text-transform:uppercase;
+  font-family:'Oswald', sans-serif;
+}
+
+body {
+  text-align:center;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  font-family: 'Work Sans', sans-serif;
+  background-color: rgb(255, 237, 237);
+}
+
+img{
+  border-radius:6px;
+}
+
+.contacts {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+
+.contact-card {
+  align-items:center;
+  flex-basis: 225px;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 13px;
+  padding-bottom: 20px;
+  background-color: white;
+}
+
+.contact-card > img {
+  width: 100%;
+  height: 200px;
+  align-self: center;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.contact-card > h3 {
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.info-group {
+  display: flex;
+}
+
+.info-group > img {
+  border-radius:8px;
+  height: 11px;
+  margin-right: 8px;
+}
+
+.info-group > p {
+  margin-block: 3px;
+  font-size: 12px;
+  color: #2B283A;
+}
+
+.details{
+  align-items:center;
+  text-align:center;
+}
+
+button{
+  font-family:'Oswald', sans-serif;
+  background-color: #1b0e37;
+  margin:8px;
+  color:white;
+  font-weight:bolder;
+  border-radius:6px;
+  
+}
+
+.details > p {
+  margin:20px 400px;
+  text-align:center;
+  display:block;
+  font-weight:600;
+}
+
+.details > img {
+  width:fit-content;
+  height:200px;
+}
+
+.tag{
+  padding:2px;
+  display:inline-block;
+  color:rgb(117, 117, 117);
+  text-transform:uppercase;
+  background-color:#ffe3f9;
+  width:auto;
+  font-weight:600;
+  border-radius:4px;
+}
+
+.tagbox{
+  text-align:center;
+}
+
+.stats{
+  color:#ffa0a0;
+}
+
+.detalles{
+  font-weight:lighter;
+}
+
+footer{
+  padding:10px;
+  margin-top:50px;
+  background-color:lavender;
+}
+
+.xbutton{
+  font-family:'Work Sans', sans-serif;
 }
